tests/functional/lang/eval-fail-derivationStrict-21.err.exp
error:
       … while calling the 'derivationStrict' builtin
         at /pwd/lang/eval-fail-derivationStrict-21.nix:1:1:
            1| builtins.derivationStrict {
             | ^
            2|   name = "foo";

       … while evaluating derivation 'foo'
         whose name attribute is located at /pwd/lang/eval-fail-derivationStrict-21.nix:2:3

       … while evaluating attribute 'args' of derivation 'foo'
         at /pwd/lang/eval-fail-derivationStrict-21.nix:6:3:
            5|   outputs = "out";
            6|   args = [
             |   ^
            7|     "a"

       … while evaluating an element of the argument list

       error: cannot coerce a set to a string: { }
